<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />


        <item
            android:id="@+id/nav_aboutapps"
            android:icon="@drawable/info"
            android:title="@string/nav_info" />

        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/developer"
            android:title="@string/nav_Developer" />

        <item
            android:id="@+id/nav_Sms"
            android:icon="@drawable/sms"
            android:title="@string/nav_Sms" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/share" />


    </group>


</menu>